--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".DiscoActivity" />
+        <activity android:name=".NewAccountActivity" />
         <activity
             android:name=".NavigationActivity"
             android:label="@string/title_activity_navigation"
